--- a/Dirty-talk.html
+++ b/Dirty-talk.html
@@ -89,7 +89,7 @@
     <div class="panel">
       <div class="stage" id="stage">
         <!-- 🔁 Replace the SRC below with YOUR exact filename -->
-        <img id="bg" src="dirty-talk-stage.png" alt="Dirty Talk Stage">
+        <img id="bg" src="dirty-talk-stage.jpg" alt="Dirty Talk Stage">
         <div class="overlay" id="overlay" aria-hidden="true"></div>
       </div>
 
